--- a/Survey/package.json
+++ b/Survey/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aspnet-webpack": "^3.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -24,6 +25,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
